SERVER-55966 Handle exceptions thrown from `AsyncTry::until`